Bug 31989 - [4.3 regression]: Gcc miscompiles C/C++ on Linux/x86-64
Summary: [4.3 regression]: Gcc miscompiles C/C++ on Linux/x86-64
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.3.0
: P3 major
Target Milestone: 4.3.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on: 31628 36015
Blocks: 31666 31681
  Show dependency treegraph
 
Reported: 2007-05-18 16:36 UTC by H.J. Lu
Modified: 2008-04-23 13:05 UTC (History)
2 users (show)

See Also:
Host:
Target: x86_64-unknown-linux-gnu
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2007-05-18 16:36:10 UTC
I have verified that this patch

http://gcc.gnu.org/ml/gcc-patches/2007-04/msg01333.html

causes bug 31666 and bug 31681.
Comment 1 H.J. Lu 2007-05-18 19:05:27 UTC
A patch is posted at

http://gcc.gnu.org/ml/gcc-patches/2007-05/msg01223.html
Comment 2 hjl@gcc.gnu.org 2007-05-18 22:35:36 UTC
Subject: Bug 31989

Author: hjl
Date: Fri May 18 21:35:12 2007
New Revision: 124835

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=124835
Log:
2007-05-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/31989
	PR target/31681
	PR target/31666
	* config/i386/i386.c (init_cumulative_args): Set maybe_vaarg to
	true if function has no argument.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/i386/i386.c

Comment 3 H.J. Lu 2007-05-18 22:40:33 UTC
Fixed.